// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="votes-container"
>
  <button
    className="upvote-btn"
    onClick={[Function]}
  />
  <span />
  <button
    className="downvote-btn"
    onClick={[Function]}
  />
</div>
`;

exports[`renders correctly with score 1`] = `
<div
  className="votes-container"
>
  <button
    className="upvote-btn"
    onClick={[Function]}
  />
  <span>
    1
  </span>
  <button
    className="downvote-btn"
    onClick={[Function]}
  />
</div>
`;
